# Vtablet

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  mainipa.yml
src/: main.py
