[project]
name = "vtablappl"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Yosbel Alba Estrada", email = "khloealba932@gmail.com" }
]
dependencies = [
  "flet==0.80.0",
  "requests",
  "pillow",
  "openpyxl"
]

[tool.flet]
org = "yae.ppl"
product = "VtablasPPL"
company = "PPL"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.80.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.80.0"}
